<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center"
    android:weightSum="2.0"
    tools:context=".ThirdSlide">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/slide3"
        android:src="@drawable/rreward" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@color/Black"
        android:textStyle="bold"
        android:text="@string/slide3"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginRight="10dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:id="@+id/back_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="end">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:layout_marginRight="10dp"
                android:textColor="@color/Black"
                android:textStyle="bold"
                android:layout_gravity="bottom"
                android:clickable="true"
                android:focusable="true"
                android:textSize="20sp"
                android:id="@+id/finish_button"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>