<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    android:weightSum="2.0"
    tools:context=".SecondSlide">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1.5"
        android:orientation="vertical"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/slide2"
            android:src="@drawable/img" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/slide2"

            android:textAlignment="center"
            android:textColor="@color/Black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:layout_weight="0.5"

        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:layout_marginRight="10dp"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:id="@+id/back_button"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end|bottom">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginRight="10dp"
            android:textColor="@color/Black"
            android:textStyle="bold"

            android:clickable="true"
            android:focusable="true"
            android:textSize="20sp"
            android:id="@+id/next_button"/>
    </LinearLayout>
</LinearLayout>
</LinearLayout>